# sdl_core_winport

./: .clang-format  .gitignore  CMakeLists.txt  FindQt.cmd  README.md  build2010Qt.cmd  common.cmd  make_test_native.bat  make_test_qt.cmd  prop2010x64.cmd  prop2013x64.cmd  prop_Qt_x86.cmd  setup_Qt_x86.cmd  setup_VS2013_x64.cmd  winprep.cmd
cmake/Modules/: FindSqlite3.cmake  FindWinGstreamer-0.10.cmake  FindWinOpenSSL.cmake  FindWinQt5Core.cmake  FindWinSqlite3.cmake
infrastructure/: format_src.py  utils.py
ms/: cmake_generate.cmd  common_setup.cmd  openssl_setup.cmd
ms_tools/: make_sqlite_lib.cmd  make_ssl_lib.cmd
src/3rd_party-static/: CMakeLists.txt
src/3rd_party-static/MessageBroker/include/: networking.h  system.h
src/3rd_party-static/encryption/: CMakeLists.txt
src/3rd_party-static/gmock-1.7.0/: CMakeLists.txt
src/3rd_party-static/gmock-1.7.0/gtest/: CMakeLists.txt
src/3rd_party-static/gmock-1.7.0/src/: gmock-spec-builders.cc
src/3rd_party-static/libusbx-1.0.16/: CMakeLists.txt
src/appMain/: CMakeLists.txt  life_cycle.cc  life_cycle.h  main.cc  main_test.cc  smartDeviceLink.ini
src/components/: CMakeLists.txt  test_main.cc
src/components/application_manager/: CMakeLists.txt
src/components/application_manager/src/: application_data_impl.cc  application_impl.cc  application_manager_impl.cc  hmi_capabilities.cc  hmi_command_factory.cc  message.cc  message_helper.cc  mobile_command_factory.cc  mobile_message_handler.cc  request_controller.cc  request_info.cc  state_controller.cc  usage_statistics.cc
src/components/application_manager/test/: CMakeLists.txt  command_impl_test.cc  event_engine_test.cc  mobile_message_handler_test.cc  mock_message_helper.cc  mock_message_helper.h  request_info_test.cc  resumption_sql_queries_test.cc
src/components/config_profile/: CMakeLists.txt
src/components/config_profile/src/: ini_file.cc  profile.cc
src/components/config_profile/test/: profile_test.cc
src/components/connection_handler/: CMakeLists.txt
src/components/connection_handler/src/: connection.cc  connection_handler_impl.cc  device.cc  heartbeat_monitor.cc
src/components/connection_handler/test/: CMakeLists.txt  connection_handler_impl_test.cc  connection_test.cc  heart_beat_monitor_test.cc
src/components/dbus/src/: dbus_adapter.cc  dbus_message.cc  schema.cc
src/components/dbus/test/: test_dbus_adapter.cc  test_dbus_message_controller.cc  test_schema.cc
src/components/formatters/: CMakeLists.txt
src/components/formatters/src/: CFormatterJsonBase.cpp  CFormatterJsonSDLRPCv1.cpp  CFormatterJsonSDLRPCv2.cpp  CSmartFactory.cpp  formatter_json_rpc.cc
src/components/formatters/test/: CFormatterJsonBase_test.cc  CMakeLists.txt  CSmartFactory_test.cc  cFormatterJsonSDLRPCv1_test.cc  cFormatterJsonSDLRPCv2_test.cc  formatter_json_rpc_test.cc
src/components/hmi_message_handler/: CMakeLists.txt
src/components/hmi_message_handler/src/: dbus_message_adapter.cc  hmi_message_adapter.cc  hmi_message_handler_impl.cc  messagebroker_adapter.cc  mqueue_adapter.cc
src/components/hmi_message_handler/test/: CMakeLists.txt  dbus_message_adapter_test.cc  hmi_message_handler_impl_test.cc  mock_subscriber.cc  mqueue_adapter_test.cc
src/components/include/protocol/: common.h  raw_message.h
src/components/include/protocol_handler/: protocol_handler.h  session_observer.h
src/components/include/security_manager/: crypto_manager.h  security_manager.h  ssl_context.h
src/components/include/transport_manager/: common.h  error.h  info.h  transport_manager.h  transport_manager_listener.h  transport_manager_listener_empty.h
src/components/include/utils/: atomic.h  atomic_object.h  auto_trace.h  byte_order.h  conditional_variable.h  data_accessor.h  date_time.h  lock.h  logger.h  macro.h  memory_barrier.h  message_queue.h  messagemeter.h  pimpl.h  pimpl_impl.h  prioritized_queue.h  rwlock.h  scope_guard.h  shared_ptr.h  timer_thread.h  winhdr.h  wsa_startup.h
src/components/interfaces/: CMakeLists.txt
src/components/media_manager/: CMakeLists.txt
src/components/media_manager/src/: file_streamer_adapter.cc  media_adapter_impl.cc  media_manager_impl.cc  pipe_streamer_adapter.cc  (+3 more)
src/components/policy/: CMakeLists.txt
src/components/protocol_handler/: CMakeLists.txt
src/components/resumption/: CMakeLists.txt
src/components/rpc_base/: CMakeLists.txt
src/components/security_manager/: CMakeLists.txt
src/components/smart_objects/: CMakeLists.txt
src/components/time_tester/: CMakeLists.txt
src/components/transport_manager/: CMakeLists.txt
src/components/utils/: CMakeLists.txt
src/components/utils/test/: CMakeLists.txt  async_runner_test.cc  auto_trace_test.cc  bitstream_test.cc  conditional_variable_test.cc  data_accessor_test.cc  date_time_test.cc  file_system_test.cc  generated_code_with_sqlite_test.cc  lock_posix_test.cc  log_message_loop_thread_test.cc  message_queue_test.cc  messagemeter_test.cc  posix_thread_test.cc  resource_usage_test.cc  rwlock_posix_test.cc  scope_guard_test.cc  shared_ptr_test.cc  signals_linux_test.cc  singleton_test.cc  stl_utils_test.cc  system_test.cc  thread_validator_test.cc  timer_thread_test.cc
src/components/utils/test/include/: generated_code_with_sqlite_test.h
src/components/utils/test/qdb_wrapper/: sql_database_test.cc  sql_query_test.cc
src/components/utils/test/sqlite_wrapper/: sql_database_test.cc  sql_query_test.cc
test/components/smart_objects/: CMakeLists.txt
tools/Utils/: generate_test_certificates.py
tools/infrastructure/: format_src.py
tools/infrastructure/git-hooks/: pre-commit  pre-commit-01-common-style  pre-commit-02-clang-format
(+1036 files in other folders)
